--- a/curious.html
+++ b/curious.html
@@ -44,37 +44,37 @@
 	<ul class="courses">
 		<li class="subject">
 			<p class="subjecttitle">Geography</p> 
-			<p class="subjectdescription">I like to learn about geography. I love maps, and I love looking at graphs and charts explaining population density, conflict zones, volcanic activity, and so on.</p>
+			<p class="subjectdescription">I like to learn about geography. I love maps, and looking at graphs and charts explaining population density, conflict zones, volcanic activity, et cetera.</p>
 		</li>
 			<img class="curiouspic" src="photos/dunes.jpg" alt="Planet Earth.">
 
 		<li class="subject">
 			<p class="subjecttitle">Environment</p> 
-			<p class="subjectdescription">I took an online class with Lund University in 2014 where I learned about sustainable urban development. I got to learn about ways in which cities, companies, and individuals can and have become <em>greener</em>.</p>
+			<p class="subjectdescription">I took an online class with Lund University in 2014 where I learned about sustainable urban development. I got to learn about ways in which cities, companies, and individuals can and have become more eco-friendly.</p>
 		</li>
 			<img class="curiouspic" src="photos/solarpanels.jpg" alt="Solar Panels.">
 			
 		<li class="subject">
 			<p class="subjecttitle">Policy</p> 
-			<p class="subjectdescription">Politics and policies can affect the way people organize, think, move, and live. I try to stay up to date with the laatest news in politics.</p>
+			<p class="subjectdescription">Politics and policies can affect the way people organize, think, move, and live. I try to stay up to date with the latest news in politics.</p>
 		</li>
 			<img class="curiouspic" src="photos/unitednations.jpg" alt="Dauchsunds at the United Nations.">
 
 		<li class="subject">
 			<p class="subjecttitle">Health</p> 
-			<p class="subjectdescription">I like to learn about geography. I love maps, and I love looking at graphs and charts explaining population density, conflict zones, volcanic activity, and so on.</p>
+			<p class="subjectdescription">Good health and education are fundamental to human development, community development, and economic development. I'm interested in learning about access to health and public health policies.</p>
 		</li>
 			<img class="curiouspic" src="photos/berries.jpg" alt="Strawberries.">
 
 		<li class="subject">
 			<p class="subjecttitle">Social Justice</p> 
-			<p class="subjectdescription">I like to learn about geography. I love maps, and I love looking at graphs and charts explaining population density, conflict zones, volcanic activity, and so on.</p>
+			<p class="subjectdescription">Justice and equal opportunities are important in a fair society. Hardwork should be enabled in a competitve environment and is fueled by social mobility.</p>
 		</li>
 			<img class="curiouspic" src="photos/zionisme.jpg" alt="Graffiti.">
 		
 		<li class="subject">
 			<p class="subjecttitle">Urban Development</p> 
-			<p class="subjectdescription">I like to learn about geography. I love maps, and I love looking at graphs and charts explaining population density, conflict zones, volcanic activity, and so on.</p>
+			<p class="subjectdescription">Born and raised in an urban environment, I have learned that cities provide many advantages and opportunities - when we are organized in the right ways. Cities can have overall negative effects on the environment when waste is not treated carefully. On the other hand, cities provide an opportunity for people to consume less and exert less pressure on the environment when we live in dense areas where we do not need to rely on motor vehicles, and where we can live in smaller spaces and thus requiring less energy to heat out homes.</p>
 		</li>
 			<img class="curiouspic" src="photos/crosswalk.jpg" alt="City crosswalk.">
 	</ul>
