--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <!-- The menu -->	
 	 <nav class="menu">
 		<ul class="active">
-			<li><a href"index.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="ncreative.html">Creative</a></li>
 			<li><a href="curious.html">Research</a></li>
